Support ListView sections with Q_GADGET model

Previously ListView models containing Q_GADGETs did not support
sections, as those expected a QObject. Add support also for getting the
properties from Q_GADGET. Includes autotest.

Task-number: QTBUG-124175
Change-Id: I91878304bdd45ac8d3c6695f0e734a252c69f302
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>